@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.6754 2020/12/14 14:24:18 adam Exp $
+$NetBSD: CHANGES-2020,v 1.6755 2020/12/14 15:17:11 tnn Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -9802,3 +9802,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated devel/py-restructuredtext_lint to 1.3.2 [adam 2020-12-14]
 	Updated devel/py-sortedcontainers to 2.3.0 [adam 2020-12-14]
 	Updated devel/py-intervaltree to 3.1.0 [adam 2020-12-14]
+	Added devel/cpu_features version 0.6.0 [tnn 2020-12-14]
